--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="link-infor__text">
                 <span><b>Link của bạn:  <i class="far fa-copy"></i></b></span>
                 <br>
-                <span class="link-text"><b>https://follme.herokuapp.com/sum-sv-50</b></span>
+                <span class="link-text"><b>https://follme.herokuapp.com/sum-sv-50-ahaha-xincha0</b></span>
             </div>
             <div class="link-infor__qr">
                 <i class="fas fa-qrcode"></i>
@@ -45,81 +45,83 @@
           </ul>
           <div class="tab-content" id="pills-tabContent">
             <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">...</div>
-            <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">...</div>
+            <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+
+                <div class="header__infor">
+                    <div class="information">
+                        <img class="infor__avatar" src="assets/img/avatar.jpg" alt="Avatar">
+                        <div class="infor__description">
+                            <h1 class="infor__name">
+                                Dương Vũ Quốc Sum
+                            </h1>
+                            <h4 class="infor__bio">
+                                Sinh viên năm 3 ĐH KHTN
+                            </h4>
+                        </div>
+                    </div>
+                    
+                </div>     
+                <div class="link-list">
+                    <a href="https://www.facebook.com/sumsv50/" target="_blank" rel="noopener noreferrer">
+                    <div class="item">
+                        <img src="assets/img/sim.png" alt="logo" class="type-logo">
+                        <h3 class="type-name">Số điện thoại</h3>
+                    </div>
+                    </a>
+                    <a href="">
+                    <div class="item">
+                        <img src="assets/img/facebook.png" alt="logo" class="type-logo">
+                        <h3 class="type-name">Facebook</h3>
+                    </div>
+                    </a>
+                    <a href="">
+                    <div class="item">
+                        <img src="assets/img/instagram.png" alt="logo" class="type-logo">
+                        <h3 class="type-name">Instagram</h3>
+                    </div>
+                    </a>
+                    <a href="">
+                    <div class="item">
+                        <img src="assets/img/email.png" alt="logo" class="type-logo">
+                        <h3 class="type-name">Email</h3>
+                    </div>
+                    </a>
+                    <a href="">
+                    <div class="item">
+                        <img src="assets/img/zalo.png" alt="logo" class="type-logo">
+                        <h3 class="type-name">Zalo</h3>
+                    </div>
+                    </a>
+                    <a href="">
+                    <div class="item">
+                        <img src="assets/img/youtube.png" alt="logo" class="type-logo">
+                        <h3 class="type-name">Youtube</h3>
+                    </div>
+                    </a>
+                    <a href="">
+                    <div class="item">
+                        <img src="assets/img/tiktok.png" alt="logo" class="type-logo">
+                        <h3 class="type-name">TikTok</h3>
+                    </div>
+                    </a>
+                    <a href="">
+                    <div class="item">
+                        <img src="assets/img/website.png" alt="logo" class="type-logo">
+                        <h3 class="type-name">Website</h3>
+                    </div>
+                    </a>
+                    <a href="">
+                    <div class="item">
+                        <img src="assets/img/link.png" alt="logo" class="type-logo">
+                        <h3 class="type-name">Link khác</h3>
+                    </div>
+                    </a>
+                </div>
+
+
+            </div>
           </div>
 
-
-
-    <div class="header__infor">
-        <div class="information">
-            <img class="infor__avatar" src="assets/img/avatar.jpg" alt="Avatar">
-            <div class="infor__description">
-                <h1 class="infor__name">
-                    Dương Vũ Quốc Sum
-                </h1>
-                <h4 class="infor__bio">
-                    Sinh viên năm 3 ĐH KHTN
-                </h4>
-            </div>
-        </div>
-        
-    </div>     
-    <div class="link-list">
-        <a href="https://www.facebook.com/sumsv50/" target="_blank" rel="noopener noreferrer">
-        <div class="item">
-            <img src="assets/img/sim.png" alt="logo" class="type-logo">
-            <h3 class="type-name">Số điện thoại</h3>
-        </div>
-        </a>
-        <a href="">
-        <div class="item">
-            <img src="assets/img/facebook.png" alt="logo" class="type-logo">
-            <h3 class="type-name">Facebook</h3>
-        </div>
-        </a>
-        <a href="">
-        <div class="item">
-            <img src="assets/img/instagram.png" alt="logo" class="type-logo">
-            <h3 class="type-name">Instagram</h3>
-        </div>
-        </a>
-        <a href="">
-        <div class="item">
-            <img src="assets/img/email.png" alt="logo" class="type-logo">
-            <h3 class="type-name">Email</h3>
-        </div>
-        </a>
-        <a href="">
-        <div class="item">
-            <img src="assets/img/zalo.png" alt="logo" class="type-logo">
-            <h3 class="type-name">Zalo</h3>
-        </div>
-        </a>
-        <a href="">
-        <div class="item">
-            <img src="assets/img/youtube.png" alt="logo" class="type-logo">
-            <h3 class="type-name">Youtube</h3>
-        </div>
-        </a>
-        <a href="">
-        <div class="item">
-            <img src="assets/img/tiktok.png" alt="logo" class="type-logo">
-            <h3 class="type-name">TikTok</h3>
-        </div>
-        </a>
-        <a href="">
-        <div class="item">
-            <img src="assets/img/website.png" alt="logo" class="type-logo">
-            <h3 class="type-name">Website</h3>
-        </div>
-        </a>
-        <a href="">
-        <div class="item">
-            <img src="assets/img/link.png" alt="logo" class="type-logo">
-            <h3 class="type-name">Link khác</h3>
-        </div>
-        </a>
-    </div>
 </div>
 <footer>
     <img src="assets/img/follme-logo.png" alt="follme-logo" class="follme-logo"/>
