--- a/index.html
+++ b/index.html
@@ -49,12 +49,7 @@
             </li>
         </ul>
         <div class="tab-content" id="pills-tabContent">
-            <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-
-
-
-
-
+            <div class="tab-pane fade  " id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
                 <img class="config__avatar" src="assets/img/3 (2).jpg">
                 <input id="inp-avatar" type="file" name="avatar"  accept="image/*" hidden="hidden">
                 <div type="button" class="button button__upload-avatar" onclick=" document.getElementById('inp-avatar').click();">
@@ -76,7 +71,7 @@
                     <i class="far fa-save"></i>Lưu thông tin
                 </div>
             </div>
-            <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+            <div class="tab-pane fade show active" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
 
                 <div class="header__infor">
                     <div class="information">
@@ -92,6 +87,7 @@
                     </div>
 
                 </div>
+                <div class="create-link" data-bs-toggle="modal" data-bs-target="#create-link-modal"><i class="fas fa-plus"></i>Thêm link</div>
                 <div class="link-list">
                     <a href="https://www.facebook.com/sumsv50/" target="_blank" rel="noopener noreferrer">
                         <div class="item">
@@ -169,9 +165,34 @@
                 </div>
                 <div class="modal-footer">
                     <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button> -->
-                    <button type="button" class="btn btn-primary btn-crop" >Xong</button>
+                    <button type="button" class="btn btn-primary btn-crop btn-confirm" >Xong</button>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <!-- Modal create link -->
+    <!-- Modal -->
+    <div class="modal fade" id="create-link-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="staticBackdropLabel">Thiết lập link</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+                    <option selected>Open this select menu</option>
+                    <option value="1">He lo</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                </select>
+            </div>
+            <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Understood</button>
+            </div>
+        </div>
         </div>
     </div>
     <footer>
@@ -179,8 +200,9 @@
         <h4>FollMe</h4>
     </footer>
     <script src='assets/js/jquery-3.6.0.min.js'></script>
+    <!-- <script type="text/javascript" src="assets/bootstrap/js/bootstrap.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/js/croppie.min.js"></script>
-    <script type="text/javascript" src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/js/me.js"></script>
     <script>
         const preview = document.querySelector('.config__avatar');
